Fertige GUI mit angepasstem build.gradle